improved the quality on mobile

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html lang="en">
-  <head>
-    <title>UPenn JISL</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link
-      rel="stylesheet"
-      href="assets/academicons-1.9.2/css/academicons.min.css"
-    />
-  </head>
+<head>
+	<title>UPenn JISL</title>
+	<meta charset="utf-8" />
+	<meta
+		name="viewport"
+		content="width=device-width, initial-scale=1, user-scalable=no"
+	/>
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link
+		rel="stylesheet"
+		href="assets/academicons-1.9.2/css/academicons.min.css"
+	/>
+	<link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
+</head>
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
