--- a/janus.html
+++ b/janus.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href= "assets/academicons-1.9.2/css/academicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
 	</head>
 	<body class="is-preload">
 
@@ -29,7 +30,7 @@
                               <ul class="icons">
                                 <li><a href="https://twitter.com/antoniloq" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                 <li><a href="https://github.com/Jisl-upenn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                <li><a href="" class="icon brands fa-youtube"><span class="label"></span></a></li>
+                                <li><a href="https://www.youtube.com/@UPenn-JISL" class="icon brands fa-youtube"><span class="label"></span></a></li>
                               </ul>
                             </header>
 
