--- a/people.html
+++ b/people.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="assets/academicons-1.9.2/css/academicons.min.css"
     />
+    <link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -100,7 +101,7 @@
                 >
               </li>
               <li>
-                <a href="" class="icon brands fa-youtube"
+                <a href="https://www.youtube.com/@UPenn-JISL" class="icon brands fa-youtube"
                   ><span class="label"></span
                 ></a>
               </li>
