--- a/publications.html
+++ b/publications.html
@@ -21,74 +21,103 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
     <style>
       body {
         font-family: Arial, sans-serif;
         margin: 0;
-        padding: 0px;
+        padding: 0;
+        line-height: 1.6;
       }
+
       .container {
-        max-width: 900px;
+        max-width: 1200px;
         margin: 0 auto;
+        padding: 0 15px;
       }
+
       .section-title {
         font-size: 24px;
         margin-bottom: 20px;
         border-bottom: 2px solid #ccc;
         padding-bottom: 10px;
       }
+
       .publication {
         display: flex;
+        flex-direction: column;
         align-items: flex-start;
         margin-bottom: 20px;
         padding: 15px;
         background-color: #fff;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        position: relative;
       }
+
+      @media(min-width: 600px) {
+        .publication {
+          flex-direction: row;
+        }
+      }
+
       .publication img {
-        width: 170px;
-        height: 150px;
+        width: 100%;
+        height: auto;
         object-fit: cover;
         border-radius: 8px;
-        margin-right: 20px;
-        flex-shrink: 0;
+        margin-bottom: 15px;
       }
+
+      @media(min-width: 600px) {
+        .publication img {
+          width: 170px;
+          height: 150px;
+          margin-right: 20px;
+          margin-bottom: 0;
+        }
+      }
+
       .publication-details {
-        flex: 1;
-        position: relative;
-      }
+    flex: 1;
+    position: relative; /* Ensure the banner is positioned relative to this block */
+  }
+
       .publication-title {
         font-size: 18px;
         margin: 0 0 5px;
       }
+
       .publication-authors,
       .publication-venue {
         font-size: 14px;
         color: #555;
         margin: 5px 0;
       }
+
       .publication-links {
         display: flex;
+        flex-wrap: wrap;
         gap: 10px;
         margin-top: 10px;
       }
+
       .new-banner {
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: yellow;
-        color: red;
-        padding: 5px 10px;
-        font-size: 14px;
-        border-radius: 5px;
-        animation: flash 1.5s infinite;
-      }
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: yellow;
+    color: red;
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    animation: flash 1.5s infinite;
+  }
+
       .highlighted {
         color: red;
         font-weight: bold;
       }
+
       @keyframes flash {
         0% {
           opacity: 1;
@@ -103,8 +132,6 @@
 
       /* Updated Button Styles */
       a.button {
-        -webkit-appearance: none;
-        -moz-appearance: none;
         appearance: none;
         text-decoration: none;
         border: none;
