--- a/publications.html
+++ b/publications.html
@@ -226,9 +226,9 @@
             </header>
 
             <p>
-              A complete list of publications can also be found on my
+              A complete list of publications can also be found on
               <a href="https://scholar.google.com/citations?user=pbmjtZsAAAAJ"
-                >Google Scholar profile</a
+                >Google Scholar.</a
               >.
             </p>
 
