name change to emphasize robotics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 <head>
-	<title>UPenn JISL</title>
+	<title>UPenn JIRL</title>
 	<meta charset="utf-8" />
 	<meta
 		name="viewport"
@@ -17,7 +17,7 @@
 		rel="stylesheet"
 		href="assets/academicons-1.9.2/css/academicons.min.css"
 	/>
-	<link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
+	<link rel="icon" href="assets/jirl-single.ico" type="image/x-icon" />
 </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -38,13 +38,13 @@
               </li>
               <li>
                 <a
-                  href="https://github.com/Jisl-upenn"
+                  href="https://github.com/jirl-upenn"
                   class="icon brands fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
               <li>
-                <a href="https://www.youtube.com/@UPenn-JISL"
+                <a href="https://www.youtube.com/@UPenn-jirl"
 				   class="icon brands fa-youtube"
                   ><span class="label">YouTube</span></a
                 >
@@ -57,8 +57,8 @@
             <div class="content">
               <header>
                 <img
-                  src="images/Jisl-logo/Jisl-logo.001.png"
-                  alt="JISL Logo"
+                  src="images/jirl-logo/jirl_logo_name.png"
+                  alt="jirl Logo"
                   width="49%"
                 />
                 <img src="images/spinning.gif" alt="Spinning" width="49%" />
@@ -66,8 +66,8 @@
 
               <br />
               <p>
-                Welcome to the website of the Janus Intelligent Systems Lab
-                (JISL) at the University of Pennsylvania! <br />
+                Welcome to the website of the Janus Intelligent Robots Lab
+                (JIRL) at the University of Pennsylvania! <br />
                 Our group brings expertise from the fields of robotics,
                 artificial intelligence, control theory, and computer vision to
                 the design of intelligent systems that can perceive, reason, and
@@ -165,7 +165,7 @@
           <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
-              &copy; Janus Intelligent Systems Lab. All rights reserved. Design:
+              &copy; Janus Intelligent Robots Lab. All rights reserved. Design:
               <a href="https://html5up.net">HTML5 UP</a>.
             </p>
           </footer>
