--- a/janus.html
+++ b/janus.html
@@ -6,14 +6,14 @@
 -->
 <html>
 	<head>
-		<title>Janus Intelligent Systems Lab</title>
+		<title>Janus Intelligent Robots Lab</title>
 		<meta charset="utf-8" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href= "assets/academicons-1.9.2/css/academicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/jirl-single.ico" type="image/x-icon" />
 	</head>
 	<body class="is-preload">
 
@@ -29,8 +29,8 @@
                               <a href="index.html" class="logo"><strong>Follow us</strong> on</a>
                               <ul class="icons">
                                 <li><a href="https://twitter.com/antoniloq" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                <li><a href="https://github.com/Jisl-upenn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                <li><a href="https://www.youtube.com/@UPenn-JISL" class="icon brands fa-youtube"><span class="label"></span></a></li>
+                                <li><a href="https://github.com/jirl-upenn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                <li><a href="https://www.youtube.com/@UPenn-jirl" class="icon brands fa-youtube"><span class="label"></span></a></li>
                               </ul>
                             </header>
 
@@ -112,7 +112,7 @@
 
 							<!-- Footer -->
               <footer id="footer">
-                <p class="copyright">&copy; Janus Intelligent Systems Lab. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                <p class="copyright">&copy; Janus Intelligent Robots Lab. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
               </footer>
 
 
