--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="assets/academicons-1.9.2/css/academicons.min.css"
     />
-    <link rel="icon" href="assets/jisl-single.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/jirl-single.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -95,13 +95,13 @@
               </li>
               <li>
                 <a
-                  href="https://github.com/Jisl-upenn"
+                  href="https://github.com/jirl-upenn"
                   class="icon brands fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
               <li>
-                <a href="https://www.youtube.com/@UPenn-JISL" class="icon brands fa-youtube"
+                <a href="https://www.youtube.com/@UPenn-jirl" class="icon brands fa-youtube"
                   ><span class="label"></span
                 ></a>
               </li>
@@ -300,7 +300,7 @@
           <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
-              &copy; Janus Intelligent Systems Lab. All rights reserved. Design:
+              &copy; Janus Intelligent Robots Lab. All rights reserved. Design:
               <a href="https://html5up.net">HTML5 UP</a>.
             </p>
           </footer>
