--- a/people.html
+++ b/people.html
@@ -241,6 +241,28 @@
               </div>
               <!-- Colab -->
               <div class="team-member">
+                <img src="images/team/Mark-Pustilnik.png" alt="Mark" />
+                <div class="team-member-info">
+                  <h3>Mark Pustilnik</h3>
+                  <p><em>PhD Student @ UC Berkeley</em></p>
+                  <div class="icons">
+                    <a
+                      href="https://www.linkedin.com/in/mark-pustilnik-85912216/"
+                      class="fa fa-home"
+                    ></a>
+                    <a
+                      href="https://scholar.google.com/citations?hl=en&user=R_FCATwAAAAJ"
+                      class="fa fa-graduation-cap"
+                    ></a>
+                    <a
+                      href="mailto:pkmark@berkeley.edu"
+                      class="fa fa-envelope"
+                    ></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="team-member">
                 <img src="images/team/himanshu_sigh.jpg" alt="Himanshu" />
                 <div class="team-member-info">
                   <h3>Himanshu Guarav Sigh</h3>
